--- a/app/src/main/res/layout/activity_configure_puzzle.xml
+++ b/app/src/main/res/layout/activity_configure_puzzle.xml
@@ -5,5 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ConfigurePuzzleActivity">
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gridView"
+        android:numColumns="2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
